add withdraw req api, rename some fields (#32)
* temp adjust to api

* adjust schema

* cleanup logs

* refactor vault little bit

* update types

* rename address to owner address

* update open api

* rename and fix update

* another rename

* actually fix all spelling errors

* final fix
